add sse notifier
