# docs/swagger.json
@@ -4,42 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/orders/{order_id}/events": {
-            "get": {
-                "description": "Get events for a specific order",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "orders"
-                ],
-                "summary": "Get order events",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "format": "uuid",
-                        "description": "Order ID",
-                        "name": "order_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/domain.OrderEvent"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/webhooks/payments/orders": {
             "post": {
                 "description": "handle event from JustPay!",
